# chemkit

./: .gitignore  AUTHORS  BIBLIOGRAPHY  CMakeLists.txt  CTestConfig.cmake  INSTALL  LICENSE  README  chemkit.pro
bindings/python/: CMakeLists.txt  atom.pxd  atom.pxi  atomtyper.pxd  atomtyper.pxi  bond.pxd  bond.pxi  bondpredictor.pxd  bondpredictor.pxi  chemkit.pyx  coordinatepredictor.pxd  coordinatepredictor.pxi  element.pxd  element.pxi  fingerprint.pxd  fingerprint.pxi  forcefield.pxd  forcefield.pxi  fragment.pxd  fragment.pxi  lineformat.pxd  lineformat.pxi  moleculardescriptor.pxd  moleculardescriptor.pxi  molecule.pxd  molecule.pxi  moleculefile.pxd  moleculefile.pxi  moleculegeometryoptimizer.pxd  moleculegeometryoptimizer.pxi  partialchargemodel.pxd  partialchargemodel.pxi  point3.pxd  point3.pxi  ring.pxd  ring.pxi  shared_ptr.pxd  string.pxd  variant.pxd  vector3.pxd  (+1 more)
demos/pdb-viewer/: CMakeLists.txt  pdbviewerdemo.cpp  pdbviewerdemo.h  pdbviewerdemo.ui
demos/trajectory-viewer/: CMakeLists.txt  trajectoryviewerdemo.cpp  trajectoryviewerdemo.h  trajectoryviewerdemo.ui
examples/cube-viewer/: .gitignore  CMakeLists.txt  cube-viewer.pro  cubeviewerexample.cpp  cubeviewerexample.h  cubeviewerexample.ui
examples/pdb-viewer/: .gitignore  CMakeLists.txt  pdb-viewer.pro  pdbviewerexample.cpp  pdbviewerexample.h
examples/uff-energy/: .gitignore  CMakeLists.txt  uff-energy.pro  uffenergyexample.cpp
src/: CMakeLists.txt  src.pro
src/apps/: CMakeLists.txt  apps.pro
src/apps/builder/: .gitignore  CMakeLists.txt  builder.cpp  builder.pro  buildertool.cpp  buildertool.h  builderwindow.cpp  builderwindow.h  builderwindow.ui  buildtool.cpp  buildtool.h  displaysettingsdock.cpp  displaysettingsdock.h  displaysettingsdock.ui  (+18 more)
src/chemkit/: CMakeLists.txt  alphashape.cpp  alphashape.h  aminoacid.cpp  aminoacid.h  aromaticitymodel.cpp  aromaticitymodel.h  atom-inline.h  atom.cpp  atom.h  atommapping.cpp  atommapping.h  atomtyper.cpp  atomtyper.h  biochemicalfile.cpp  biochemicalfile.h  biochemicalfileformat.cpp  biochemicalfileformat.h  bitset.h  blas.h  bond-inline.h  bond.cpp  bond.h  bondpredictor.cpp  bondpredictor.h  cartesiancoordinates.cpp  cartesiancoordinates.h  chemicalfile.cpp  chemicalfile.h  chemicalfileformat.cpp  chemicalfileformat.h  chemkit.cpp  chemkit.h  chemkit.pro  commainitializer-inline.h  commainitializer.h  concurrent.h  config.h.in  conformer.cpp  conformer.h  (+164 more)
src/graphics/: CMakeLists.txt  graphics.cpp  graphics.h  graphics.pro  graphicsatomcolormap.cpp  graphicsatomcolormap.h  graphicsatomitem.cpp  graphicsatomitem.h  graphicsbonditem.cpp  graphicsbonditem.h  graphicsboundingbox.h  graphicscamera.cpp  graphicscamera.h  graphicscylinder.cpp  graphicscylinder.h  graphicscylinderitem.cpp  graphicscylinderitem.h  graphicsisosurfaceitem.cpp  graphicsisosurfaceitem.h  graphicsitem.cpp  graphicsitem.h  graphicslight.cpp  graphicslight.h  graphicsmaterial.cpp  graphicsmaterial.h  graphicsmolecularsurfaceitem.cpp  graphicsmolecularsurfaceitem.h  graphicsmoleculeitem.cpp  graphicsmoleculeitem.h  graphicsmoleculewireframeitem.cpp  graphicsmoleculewireframeitem.h  graphicsnavigationtool.cpp  graphicsnavigationtool.h  graphicsnucleicaciditem.cpp  graphicsnucleicaciditem.h  graphicsoverlay.cpp  graphicsoverlay.h  graphicspainter.cpp  graphicspainter.h  graphicspoint-inline.h  (+40 more)
src/gui/: CMakeLists.txt  atomcolormap.cpp  atomcolormap.h  gui.cpp  gui.h  periodictabledialog.cpp  periodictabledialog.h  periodictabledialog.ui  periodictablewidget.cpp  periodictablewidget.h  periodictablewidget.ui
src/io/: CMakeLists.txt  genericfile-inline.h  genericfile.h  io.cpp  io.h  moleculefile.cpp  moleculefile.h  moleculefileformat.cpp  moleculefileformat.h  moleculefileformatadaptor-inline.h  moleculefileformatadaptor.h  polymerfile.cpp  polymerfile.h  polymerfileformat.cpp  polymerfileformat.h  trajectoryfile.cpp  trajectoryfile.h  trajectoryfileformat.cpp  trajectoryfileformat.h
src/md/: CMakeLists.txt  forcefield.cpp  forcefield.h  forcefieldatom.cpp  forcefieldatom.h  forcefieldcalculation-inline.h  forcefieldcalculation.cpp  forcefieldcalculation.h  forcefieldenergydescriptor-inline.h  forcefieldenergydescriptor.h  forcefieldinteractions.cpp  forcefieldinteractions.h  integrator.cpp  integrator.h  md.cpp  md.h  moleculegeometryoptimizer.cpp  moleculegeometryoptimizer.h  potential.cpp  potential.h  topology.cpp  topology.h  topologybuilder.cpp  topologybuilder.h  trajectory.cpp  trajectory.h  trajectoryfile.cpp  trajectoryfile.h  trajectoryfileformat.cpp  trajectoryfileformat.h  trajectoryframe.cpp  trajectoryframe.h
src/md-io/: CMakeLists.txt  md-io.cpp  md-io.h  topologyfile.cpp  topologyfile.h  topologyfileformat.cpp  topologyfileformat.h  trajectoryfile.cpp  trajectoryfile.h  trajectoryfileformat.cpp  trajectoryfileformat.h
src/plugins/: CMakeLists.txt  plugin.pri  plugins.pro
src/qt-designer-plugins/: CMakeLists.txt  qt-designer-plugins.pro
src/web/: CMakeLists.txt  downloadthread.cpp  downloadthread.h  proteindatabank.cpp  proteindatabank.h  pubchem.cpp  pubchem.h  pubchemquery.cpp  pubchemquery.h  pubchemquerythread.cpp  pubchemquerythread.h  web.cpp  web.h  web.pro
src/widgets/: CMakeLists.txt  atomcolormap.cpp  atomcolormap.h  graphicsatomcolormap.cpp  graphicsatomcolormap.h  moleculeeditor.cpp  moleculeeditor.h  moleculewatcher.cpp  moleculewatcher.h  periodictabledialog.cpp  periodictabledialog.h  periodictablewidget.cpp  periodictablewidget.h  widgets.cpp  widgets.h  widgets.pro
tests/: CMakeLists.txt
tests/auto/: CMakeLists.txt  auto.pro
tests/benchmarks/: CMakeLists.txt  benchmarks.pro
tests/data/: 1UBQ.pdbml  1UBQ.top  2DHB.pdbml  MMFF94_hypervalent.mol2  adenosine.mol  alphabet.mol2  benzene-homo.cube  cox2.smi  ethane.cjson  ethanol.fh  ethanol.mopcrt  ethanol.mopin  glucose.cml  gly-ala.mol2  guanine.cml  guanine.fh  guanine.mol  guanine.mopcrt  guanine.mopin  herg.smi  methane.xyz  methanol.sdf  paracetamol.cml  pubchem_416_benzenes.sdf  serine.mol  uridine.mol2  uridine.txyz  water.mol
tests/manual/: CMakeLists.txt  manual.pro
(+1161 files in other folders)
